--- a/package.json
+++ b/package.json
@@ -16,9 +16,11 @@
   "dependencies": {
     "axios": "^0.18.0",
     "element-ui": "^2.2.1",
+    "file-saver": "^1.3.8",
     "vue": "^2.5.2",
     "vue-router": "^3.0.1",
-    "vuex": "^3.0.1"
+    "vuex": "^3.0.1",
+    "xlsx": "^0.12.11"
   },
   "devDependencies": {
     "autoprefixer": "^7.1.2",
